syntax = "proto3";

option csharp_namespace = "SushiOrderClient";
option go_package = "./pb";

message Order {
    string username = 1;
    int32 m1_count = 2;
    int32 m2_count = 3;
    int32 m3_count = 4;
    int32 m4_count = 5;
    int32 spring_roll_count = 6;
}

message CreateOrderRequest {
    Order order = 1;
}

message CreateOrderResponse {}

message ListOrdersRequest {}

message ListOrdersResponse {
    repeated Order orders = 1;
}

service SushiService {
    rpc CreateSushiOrder (CreateOrderRequest) returns (CreateOrderResponse);
    rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse);
}